Speed up batch writing to DB